<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <include
        layout="@layout/view_camera_and_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_location_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText android:id="@+id/activity_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/activity_location_hint"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/activity_date_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button android:id="@+id/activity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/activity_gps_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Spinner
        android:id="@+id/activityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete"/>

        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Show Location"/>
    </LinearLayout>


</LinearLayout>